# hackathon-constraint-agent

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
db/: schema.sql
deploy/: Dockerfile.api  Dockerfile.streamlit  README.md  cloudbuild.api.yaml  cloudbuild.streamlit.yaml
docs/: 00_overview.md  01_handover_original.md  02_hackathon_rules.md  03_tech_stack.md  04_input_flow.md  05_remaining_tasks.md  06_polish_ideas.md  99_decisions_log.md
docs/presentation/: 01_what_we_built.md  02_ux_design.md
docs/reference/: 00_hackathon_link.md  01_goals_and_context.md  02_initial_idea.md  03_idea_overview.md  04_faq.md  05_rules.md
docs/spec/: 01_models.md  02_api.md  03_parser_io.md  04_admin_workflow.md  05_setup_io.md  06_solver.md  07_gemini_agents.md  08_l2_handler_generation.md  (+4 more)
frontend/: index.html  package-lock.json
scripts/: add_demo_notes.py  check_gemini.py  check_recipe_live.py  check_t1_live.py  check_t1_notes.py  check_t2_live.py  check_weekend_live.py  gen_demo_data.py  gen_desired_shifts.py  gen_headcounts.py  gen_sample_masters.py  load_test_solver.py  verify_demo_data.py
src/: _sandbox_harness.py  llm.py  parser_stub.py  persistence.py  sandbox.py  storage.py  usage.py
tests/: conftest.py  test_chat_clarify.py  test_demo_load.py  test_dynamic_handler.py  test_llm_retry.py  test_models.py  test_note_apply.py  test_parser_admin.py  test_persistence.py  test_recipe.py  test_recipe_flow.py  test_sandbox.py  test_solver.py  test_submit_preview.py  test_t2_loop.py  test_validator.py
(+87 files in other folders)
