[project]
name = "constraint-agent"
version = "0.1.0"
description = "制約管理エージェント — ハッカソン用"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.7",
    "ortools>=9.10",
    "google-genai>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.40",
    "supabase>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
